--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 108 AGENDA (2027 Cohort)</title>
+        <title>GDWD 105 AGENDA (6026 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for March 13th</h1>
-            <h3>Week 38 Day 1 (Portfolio Projects Week 1)</h3>
+            <h1>GDWD 108 - Agenda for May 22nd</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
+                        <li>
+                            How do you feel about the idea of coding?
+
+                        </li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container ">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Week 1 Project Selection Discussion</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
@@ -33,21 +37,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Week 1 Project Selection Discussion</li>
+                            <li><span class="type">Resources</span>Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Presentation</span>108 Project Submission Guidelines</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">PowerPoint</span>Intro to WordPress UI</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Process Post Template</li>
+                            <li><span class="type">Demo</span>Intro to WordPress</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
