6026 W19D3 agenda (day) [caught up?]

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for May 23rd</h1>
-            <h3>Week 19 Day 2 (Intro to CMS)</h3>
+            <h1>GDWD 108 - Agenda for May 27th</h1>
+            <h3>Week 19 Day 3 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Are you an early bird, or a night owl?
+                            Coffee? Tea? Or other?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-gray">
+                    <div class="img-container more-space light-green">
                         <img 
-                            src="images/night-owl.webp"
-                            alt="night owl"
+                            src="images/tea-rex.jpg"
+                            alt="tea-rex"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 1</li>
-                        <li><span class="type">Exercise</span>My First Blog Post</li>
-                        <li><span class="type">Exercise</span>Replicating Raycon</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 2</li>
+                        <li><span class="type">Exercise</span>Recipe Page</li>
                     </ul>
                 </div>
 
@@ -37,10 +36,9 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 1</li>
-                            <li><span class="type">Demo</span>Intro to WordPress [cont.]</li>
-                            <li><span class="type">Exercise</span>My First Blog Post</li>
-                            <li><span class="type">Demo</span>Custom Navbars (Menus)</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 2</li>
+                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
+                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
                         <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
@@ -53,7 +51,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Replicating Raycon</li>
+                            <li><span class="type">Exercise</span>Recipe Page</li>
                         </ul>
                     </div>
                 </div>
