--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for May 27th</h1>
-            <h3>Week 19 Day 3 (Intro to CMS)</h3>
+            <h1>GDWD 108 - Agenda for May 28th</h1>
+            <h3>Week 19 Day 4 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Coffee? Tea? Or other?
+                            What is one thing you really like and one thing you 
+                            really dislike about WordPress so far?
                         </li>
                     </ul>
-                    <div class="img-container more-space light-green">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/tea-rex.jpg"
-                            alt="tea-rex"
+                            src="images/overthinking.webp"
+                            alt="overthinking"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 2</li>
-                        <li><span class="type">Exercise</span>Recipe Page</li>
+                        <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                        <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
+                        <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
                     </ul>
                 </div>
 
@@ -36,9 +38,10 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 2</li>
-                            <li><span class="type">PowerPoint</span>Domains, Hosting, and Website Creation</li>
-                            <li><span class="type">Demo</span>Columns and Layouts, Anchors and Links</li>
+                            <li><span class="type">Demo</span>Homepage Settings</li>
+                            <li><span class="type">Demo</span>Google Fonts Plugin</li>
+                            <li><span class="type">Exercise</span>WordPress Retail Site Creation</li>
+                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page)</li>
                         <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
@@ -51,7 +54,8 @@
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Recipe Page</li>
+                            <li><span class="type">Exercise</span>Backing up your WordPress Site</li>
+                            <li><span class="type">Exercise</span>Foxtail Farms Site - Project Checkpoint (Market Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
