--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for May 29th</h1>
-            <h3>Week 19 Day 5 (Intro to CMS)</h3>
+            <h1>GDWD 108 - Agenda for May 30th</h1>
+            <h3>Week 20 Day 1 (Intro to HTML - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you had to choose, would you pick extreme cold? or extreme heat?
-
+                            <li>What is your go-to comfort food?</li>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/procrastination.webp"
-                            alt="procrastination"
+                            src="images/feelingsnacky.jpg"
+                            alt="feeling snacky"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 3</li>
-                        <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
-                        <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
+                        <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                        <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                     </ul>
                 </div>
 
@@ -38,8 +36,9 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 3</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Quiz</span>WordPress, Domains, and Hosting</li>
+                            <li><span class="type">PowerPoint</span>General Web Development</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup</li>
                         <!-- </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
@@ -52,9 +51,8 @@
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study Hints</li>
-                            <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
+                            <li><span class="type">Exercise</span>Code Skeleton Setup [cont.]</li>
                         </ul>
                     </div>
                 </div>
