unleash the drills

--- a/cookbook/meal-prep/basic-html-drills/page0.html
+++ b/cookbook/meal-prep/basic-html-drills/page0.html
@@ -10,29 +10,27 @@
         <h1>Basic HTML Drills</h1>
 
         <!--
-            This is a type of content I call a "drill set". It is a 
-            complete/incomplete type of exercise, where we just
-            want the students to show they tried.
+            This is a type of content we call a "drill set".
+            They encourage you to work (and fail) quickly and 
+            safely.  The pressure is low, since these exercise
+            are complete/incomplete, and you have the solutions
+            available!
 
-            The idea is that students have around 3-5 minutes to
-            complete an individual drill, which asks them to 
-            accomplish a specific goal, usually to rewrite existing
+            The idea is that you have around 3-5 minutes to
+            complete an individual drill, which asks you to 
+            accomplish a specific goal, usually by rewriting existing
             code to make the preview resemble the image above it.
             
-            Then when time is up, you show a potential solution 
-            to that drill (there could be other ways to accomplish 
-            the goal), and then move on to the next one.
+            Then when time is up (or if you complete it early), you
+            look up the solution to make sure you did it properly.
+            There may be other solutions that are more efficient,
+            so be sure to read the solutions even if you're sure
+            you accomplished the goal!
 
-            You can answer student questions about WHY the solution
-            worked, or if another type of approach would work too,
-            but I recommend NOT answering debugging-related questions
-            (e.g. "why doesn't my code work") until after all drills 
-            have been completed.
+            You are free to ask your instructor questions if you
+            get stuck or confused while working on the drills.
 
-            Debugging sessions can really eat of time and derail
-            the momentum of the class, so it's best to save those
-            for time when the rest of the class has something to
-            work on.
+            Good luck!
         -->
 
         <section id="drill1">
