--- a/cookbook/meal-prep/basic-html-drills/page3.html
+++ b/cookbook/meal-prep/basic-html-drills/page3.html
@@ -27,12 +27,14 @@
                 <!-- MODIFY THE CODE BELOW THIS COMMENT -->
 
                 <p>
-                    Lorem ipsum dolor <b>sit amet consectetur</b>
-                    adipisicing elit. Iste adipisci porro 
-                    aliquid, <i>obcaecati veniam dignissimos</i>
+                    Lorem ipsum dolor 
+                    <b>sit amet consectetur</b>
+                    adipisicing elit. Iste adipisci porro aliquid, 
+                    <i>obcaecati veniam dignissimos</i>
                     totam. 
                     <b>
-                        Architecto ex sed, <i>porro esse totam,</i> 
+                        Architecto ex sed, 
+                        <i>porro esse totam,</i> 
                         optio consectetur debitis iste 
                         commodi illum et natus!
                     </b>
