--- a/cookbook/meal-prep/basic-html-drills/page4.html
+++ b/cookbook/meal-prep/basic-html-drills/page4.html
@@ -15,15 +15,18 @@
             <p>Make the content below look like the image above</p>
 
             <!--
-                Give the students the full 5 minutes for this drill.
+                You will likely need a full 5 minutes for this drill.
 
                 It's not that complicated of a solution, basically
-                just wrapping content in headings and <sub> and <sup>
+                just wrapping content in headings and <sub> or <sup>
                 elements, but the code can get messy rather quickly,
-                which may trip up some students.
+                which may trip you up.
                 
                 I've reformatted the solution here to keep it clean,
                 by splitting some of the content across multiple lines.
+                You don't necessarily have to have yours exactly the
+                same, but consider whether your code is easier or
+                harder to read compared to the solution here.
             -->
 
             <div class="solution">
