--- a/cookbook/meal-prep/basic-html-drills/page5.html
+++ b/cookbook/meal-prep/basic-html-drills/page5.html
@@ -15,9 +15,13 @@
             <p>Make the content below look like the image above</p>
 
             <!--
-                This one shouldn't be too bad, as long as they recall
-                the line break elements. Other than that, it's just 
+                This one shouldn't be too bad, as long as you remember
+                the Line Break elements. Other than that, it's just 
                 the usual headings and paragraphs.
+
+                The Line Break elements don't technically need to be
+                on their own lines, but doesn't it look cleaner and
+                more organized that way?
             -->
 
             <div class="solution">
@@ -27,7 +31,12 @@
 
                 <p>
                     It can be very beneficial to take a few times a 
-                    day to just<br>stop<br>breathe<br>
+                    day to just
+                    <br>
+                    stop
+                    <br>
+                    breathe
+                    <br>
                     and simply sit in the moment.
                 </p>
                 
