--- a/cookbook/meal-prep/basic-html-drills/page6.html
+++ b/cookbook/meal-prep/basic-html-drills/page6.html
@@ -18,6 +18,15 @@
                 This one shouldn't be too bad either, just headings
                 and paragraphs again with horizontal rules (<hr>)
                 thrown in there.
+
+                You might notice that there is no empty line before
+                the first horizontal rule.  That is still considered
+                clean code.  
+
+                Empty lines between elements is optional, and often
+                comes down to personal preference. However, be 
+                sure not to include more than one empty line in 
+                a row: that would be considered excessive.
             -->
 
             <div class="solution">
