--- a/cookbook/meal-prep/basic-html-drills/page7.html
+++ b/cookbook/meal-prep/basic-html-drills/page7.html
@@ -77,9 +77,10 @@
             <!-- MODIFY THE CODE BELOW THIS COMMENT -->
 
             <p>
-                Lorem ipsum dolor <b>sit amet consectetur</b>
-                adipisicing elit. Iste adipisci porro 
-                aliquid, <i>obcaecati veniam dignissimos</i>
+                Lorem ipsum dolor 
+                <b>sit amet consectetur</b>
+                adipisicing elit. Iste adipisci porro aliquid, 
+                <i>obcaecati veniam dignissimos</i>
                 totam. 
                 <b>
                     Architecto ex sed, <i>porro esse totam,</i> 
@@ -135,7 +136,12 @@
 
             <p>
                 It can be very beneficial to take a few times a 
-                day to just<br>stop<br>breathe<br>
+                day to just
+                <br>
+                stop
+                <br>
+                breathe
+                <br>
                 and simply sit in the moment.
             </p>
             
