--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,53 +8,54 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 2nd</h1>
-            <h3>Week 20 Day 2 (Intro to HTML - Day 2)</h3>
+            <h1>GDWD 108 - Agenda for June 3rd</h1>
+            <h3>Week 20 Day 3 (Intro to HTML - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite restaurant?</li>
-
+                        <li>What is your favorite snack food/dessert?</li>
                     </ul>
-                    <div class="img-container more-space dark-red">
+                    <div class="img-container">
                         <img 
-                            src="images/pho-fox.webp"
-                            alt="pho-fox"
+                            src="images/snacks.webp"
+                            alt="snack panda"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 4</li>
-                        <li><span class="type">Exercise</span>Hello World</li>
-                        <li><span class="type">Exercise</span>Basic HTML Drills (?)</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 5</li>
+                        <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                        <li><span class="type">Exercise</span>Wiki Page</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <h3>Period 1 (9:10am-12pm)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 4</li>
-                            <li><span class="type">PowerPoint</span>Intro to HTML</li>
-                            <li><span class="type">Exercise</span>Hello World</li>
-                            <li><span class="type">PowerPoint</span>HTML Tags and Elements</li>
-                            <li><span class="type">Demo</span>HTML Heading Elements</li>
-                        <!-- </ul>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 5</li>
+                            <li><span class="type">Kahoot</span>Tags and Elements Review</li>
+                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
-                        <ul> -->
+                        <ul>
+                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">Powerpoint</span>HTML Attributes</li>
+                            <li><span class="type">Demo</span>HTML Images</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 1 (HTML Tags and Elements)</li>
-                            <li><span class="type">Exercise</span>Basic HTML Drills (?)</li>
+                            <li><span class="type">Powerpoint</span>Clean Code - Part 1 (HTML Tags & Elements)</li>
+                            <li><span class="type">Powerpoint</span>Clean Code - Part 2 (HTML Attributes)</li>
+                            <li><span class="type">Exercise</span>Wiki Page</li>
                         </ul>
                     </div>
                 </div>
