--- a/cookbook/meal-prep/basic-html-drills/page4.html
+++ b/cookbook/meal-prep/basic-html-drills/page4.html
@@ -22,11 +22,25 @@
                 elements, but the code can get messy rather quickly,
                 which may trip you up.
                 
-                I've reformatted the solution here to keep it clean,
+                I've reformatted the solution here to keep it clean
                 by splitting some of the content across multiple lines.
                 You don't necessarily have to have yours exactly the
                 same, but consider whether your code is easier or
                 harder to read compared to the solution here.
+
+                Also, while it often makes the code easier to read
+                by putting styling elements on their own lines, there's
+                also a side effect of doing so: spaces get added around 
+                them on the page.
+
+                For bold and italic elements, that's not usually a 
+                problem, but for superscript and subscript elements
+                which are usually supposed to follow immediately after
+                their associated letter, that won't look good.
+
+                So, in some cases, we HAVE to keep the styling elements
+                on the same line as the content around them, in order
+                for us to avoid extra spaces on the page.
             -->
 
             <div class="solution">
@@ -37,8 +51,7 @@
                 <h4>Slope Formula</h4>
 
                 <p>
-                    m = 
-                    (y<sub>2</sub> - y<sub>1</sub>) / 
+                    m = (y<sub>2</sub> - y<sub>1</sub>) / 
                     (x<sub>2</sub> - x<sub>1</sub>)
                 </p>
 
