--- a/cookbook/meal-prep/text-styling/page5.html
+++ b/cookbook/meal-prep/text-styling/page5.html
@@ -18,18 +18,27 @@
         <i>This is italicized text outside of a paragraph</i>
         <!--
             Now we'll add bold and italicized text elements
-            inside of paragraph elements
+            inside of paragraph elements.
+
+            It's technically not necessary to give the <b> and <i>
+            elements their own lines, but it does make it much 
+            clearer where the styled text begins and ends, so we
+            encourage you to do the same!
         -->
         <p>
-            This is <b>bolded text</b> inside of a paragraph.
+            This is 
+            <b>bolded text</b> 
+            inside of a paragraph.
         </p>
         <p>
-            This is <i>italicized text</i> inside of a paragraph.
+            This is 
+            <i>italicized text</i> 
+            inside of a paragraph.
         </p>
         <!--
-            Notice how the bold and italized elements are in-line 
-            with the text? Again, that is because they are "inline"
-            HTML elements.
+            Notice how the bold and italized elements in the preview
+            are in-line with the text? Again, that is because they 
+            are "inline" HTML elements.
         -->
     </body>
 </html>
