--- a/cookbook/meal-prep/text-styling/page7.html
+++ b/cookbook/meal-prep/text-styling/page7.html
@@ -17,16 +17,24 @@
         <b>This is bolded text outside of a paragraph.</b>
         <i>This is italicized text outside of a paragraph</i>
         <p>
-            This is <b>bolded text</b> inside of a paragraph.
+            This is 
+            <b>bolded text</b> 
+            inside of a paragraph.
         </p>
         <p>
-            This is <i>italicized text</i> inside of a paragraph.
+            This is 
+            <i>italicized text</i> 
+            inside of a paragraph.
         </p>
         <p>
-            This is <sup>superscripted text</sup> inside of a paragraph.
+            This is 
+            <sup>superscripted text</sup> 
+            inside of a paragraph.
         </p>
         <p>
-            This is <sub>subscripted text</sub> inside of a paragraph.
+            This is 
+            <sub>subscripted text</sub> 
+            inside of a paragraph.
         </p>
         <!--
             Finally, we'll add a couple more unusual HTML elements:
@@ -42,7 +50,9 @@
             modifying any children.
         -->
         <p>
-            This sentence has a line break <br> in the middle of it.
+            This sentence has a line break
+            <br> 
+            in the middle of it.
         </p>
         <hr>
         <p>
