labeling anchors demo better

--- a/cookbook/meal-prep/anchors/page6.html
+++ b/cookbook/meal-prep/anchors/page6.html
@@ -28,10 +28,15 @@
             us off of the page to another site.
 
             Now let's find out how to navigate somewhere
-            else on the same page.
+            else on the same page (called internal anchors
+            or hyperlinks).
 
-            This approach is a little more complicated,
-            because there are multiple pieces involved.
+            We'll start by putting a heading to label this
+            second half of the demo.
+
+            Creating internal anchors/hyperlinks is a 
+            little more complicated, because there are 
+            multiple pieces involved.
 
             BUT, it's actually very similar to how we 
             created Internal Links in WordPress, if you
@@ -56,6 +61,7 @@
             to succesfully navigate within the page, we'll
             start with the last part first: the anchors.
         -->
+        <h2>Internal Page Anchors (Hyperlinks)</h2>
         <h6>TABLE OF CONTENTS</h6>
         <ul>
             <li>
