--- a/cookbook/meal-prep/anchors/page7.html
+++ b/cookbook/meal-prep/anchors/page7.html
@@ -22,6 +22,8 @@
                 visit developer.mozilla.org!
             </a>
         </p>
+        
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <h6>TABLE OF CONTENTS</h6>
         <ul>
             <li>
