--- a/cookbook/meal-prep/anchors/page9.html
+++ b/cookbook/meal-prep/anchors/page9.html
@@ -31,6 +31,7 @@
             To do this, just add the attribute values after
             the # in the href.
         -->
+        <h2>External Page Anchors (Hyperlinks)</h2>
         <h6>TABLE OF CONTENTS</h6>
         <ul>
             <li>
