--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 4th</h1>
-            <h3>Week 20 Day 4 (Intro to HTML - Day 4)</h3>
+            <h1>GDWD 108 - Agenda for June 5th</h1>
+            <h3>Week 20 Day 5 (Intro to HTML - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is your favorite genre of story to read?</li>
+                        <li>What is one of your favorite TV series/anime?</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space-offset">
                         <img 
-                            src="images/books_happy_place.jpg"
-                            alt="books happy place"
+                            src="images/tv.webp"
+                            alt="tv"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 6</li>
-                        <li><span class="type">Exercise</span>Wiki Page</li>
-                        <li><span class="type">Exercise</span>Recipe Page</li>
+                        <li><span class="type">Project</span>HTML Potluck</li>
                     </ul>
                 </div>
 
@@ -35,24 +33,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 6</li>
-                            <li><span class="type">Kahoot</span>HTML Attributes</li>
-                            <li><span class="type">Exercise</span>Wiki Page</li>
+                            <li><span class="type">Kahoot</span>HTML Children Review</li>
+                            <li><span class="type">Project</span>HTML Potluck</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Indentation Review</li>
-                            <li><span class="type">Exercise</span>Recipe Page</li>
+                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
                         </ul>
                     </div>
                 </div>
