--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 5th</h1>
-            <h3>Week 20 Day 5 (Intro to HTML - Day 5)</h3>
+            <h1>GDWD 108 - Agenda for June 6th</h1>
+            <h3>Week 21 Day 1 (Intro to HTML - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What do you think of HTML so far?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
-                        <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                    <div class="img-container more-space dark-gray">
+                        <img
+                            src="images/lab-attire.webp"
+                            alt="lab in lab attire"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -33,22 +33,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
+                            <li><span class="type">Lab Time</span>Past Assignments</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
