--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,7 +24,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
                     </ul>
                 </div>
 
@@ -48,6 +48,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
+                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
                             <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
