--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 6th</h1>
-            <h3>Week 21 Day 1 (Intro to HTML - LAB DAY)</h3>
+            <h1>GDWD 108 - Agenda for June 9th</h1>
+            <h3>Week 21 Day 2 (Intro to CSS - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What do you think of HTML so far?</li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
-                        <img
-                            src="images/lab-attire.webp"
-                            alt="lab in lab attire"
+                    <div class="img-container">
+                        <img 
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
+                        <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                        <li><span class="type">Exercise</span>Color Palettes</li>
                     </ul>
                 </div>
 
@@ -33,23 +35,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Intro to GitHub</li>
-                            <li><span class="type">Lab Time</span>Past Assignments</li>
+                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
+                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills [cont.]</li>
+                            <li><span class="type">Exercise</span>Color Palettes</li>
                         </ul>
                     </div>
                 </div>
