--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -27,6 +27,7 @@
                         <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
                         <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         <li><span class="type">Exercise</span>Color Palette</li>
+                        <li><span class="type">Exercise</span>Bulletin Board (?)</li>
                     </ul>
                 </div>
 
