--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 10th</h1>
-            <h3>Week 21 Day 3 (Intro to CSS - Day 2)</h3>
+            <h1>GDWD 108 - Agenda for June 11th</h1>
+            <h3>Week 21 Day 4 (Intro to CSS - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both? or neither?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="cats vs dogs"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
-                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
-                        <li><span class="type">Exercise</span>Color Palette</li>
-                        <li><span class="type">Exercise</span>Bulletin Board (?)</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
+                        <li><span class="type">Exercise</span>Bulletin Board</li>
+                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
                     </ul>
                 </div>
 
@@ -36,24 +35,25 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
-                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
+                            <li><span class="type">PowerPoint</span>Document Flow</li>
+                        <li><span class="type">Exercise</span>Bulletin Board</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Color Palette</li>
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
+                            <li><span class="type">PowerPoint</span>Box Model</li>
+                            <li><span class="type">Demo</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
-                            <li><span class="type">Exercise</span>Bulletin Board</li>
+                            <li><span class="type">Demo</span>Box Model [cont.]</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                 </div>
