--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 108 - Agenda for June 11th</h1>
-            <h3>Week 21 Day 4 (Intro to CSS - Day 3)</h3>
+            <h1>GDWD 108 - Agenda for June 12th</h1>
+            <h3>Week 21 Day 5 (Intro to CSS - Day 4)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Cats? or Dogs? (or both? or neither?)</li>
+                        <li>Would you prefer a staycation? or a destination vacation?</li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/cats-vs-dogs.jpeg"
-                            alt="cats vs dogs"
+                            src="images/island-vacation.jpg"
+                            alt="cat on an island turtle"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
-                        <li><span class="type">Exercise</span>Bulletin Board</li>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
+                        <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
                     </ul>
                 </div>
 
@@ -35,25 +34,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
-                            <li><span class="type">PowerPoint</span>Document Flow</li>
-                        <li><span class="type">Exercise</span>Bulletin Board</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
+                            <li><span class="type">Kahoot</span>CSS Rules Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Box Model</li>
-                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Demo</span>Combining Selectors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Box Model [cont.]</li>
-                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">Kahoot</span>Document Flow and HTML Elements Review</li>
+                            <li><span class="type">Exercise</span>Containers and Selectors Drills</li>
                         </ul>
                     </div>
                 </div>
