--- a/showcase/index.html
+++ b/showcase/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Student Showcases</title>
+        <title>6026 Student Showcases</title>
         <link href="css/setup.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
     </head>
