--- a/showcase/product-showcase-site.html
+++ b/showcase/product-showcase-site.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Box Framing Project | 6026 Student Showcase</title>
+        <title>Product Showcase Site Exercise | 6026 Student Showcase</title>
         <link href="css/setup.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <link href="css/product-showcase-site.css" rel="stylesheet">
