--- a/cookbook/examples/wiki-with-sidebar/index.html
+++ b/cookbook/examples/wiki-with-sidebar/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Wiki with Sidebar (Exercise)</title>
+        <title>Advanced Wiki with Sidebar (Exercise)</title>
         <link href="css/style.css" rel="stylesheet" data-meal-prep>
         <!--
             By including this code in my assignment,
