--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,6 +24,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
                         <li><span class="type">Exercise</span>Blog with Sidebar</li>
                     </ul>
                 </div>
@@ -34,13 +35,14 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">PowerPoint</span>Flexbox (Part 2)</li>
-                            <li><span class="type">PowerPoint</span>CSS Grid</li>
+                            <li><span class="type">Exercise</span>Flexbox Drills - Part 1</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
+                            <li><span class="type">PowerPoint</span>CSS Grid</li>
                             <li><span class="type">Demo</span>Two Column Layouts (Grid)</li>
                         </ul>
                     </div>
